--- a/mission-02/login.html
+++ b/mission-02/login.html
@@ -6,38 +6,43 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>position 과제</title>
+  <link rel="stylesheet" href="login.css" />
 </head>
 
 <body>
-  <h1>position 과제</h1>
-  <div>
-    <h2>로그인</h2>
-    <form action="/" class="loginForm" method="post">
-      <fieldset>
-        <legend class="a11y">로그인 폼</legend>
-        <div class="loginFormContainer">
-          <div>
-            <label for="userId">아이디</label>
-            <input type="email" id="userId" name="userId" placeholder="euid@euid.com" required />
+  <div class="wrapper">
+    <h1>position 과제</h1>
+    <div class="loginWrapper">
+      <h2 class="loginTitle">로그인</h2>
+      <form action="/" class="loginForm" method="post">
+        <fieldset>
+          <legend class="a11y">로그인 폼</legend>
+          <div class="loginFormContainer">
+            <div class="inputContainer">
+              <label for="userId" class="inputContainer__label">아이디</label>
+              <input type="email" class="inputContainer__input" id="userId" name="userId" placeholder="euid@euid.com"
+                required />
+            </div>
+            <div class="inputContainer">
+              <label for="userPassword" class="inputContainer__label">비밀번호</label>
+              <input type="password" class="inputContainer__input" id="userPassword" name="userPassword"
+                placeholder="8자리 이상" required />
+            </div>
+            <button type="submit" class="loginBtn">로그인</button>
           </div>
-          <div>
-            <label for="userPassword">비밀번호</label>
-            <input type="password" id="userPassword" name="userPassword" placeholder="8자리 이상" required />
+          <div class="memberService" aria-label="회원 서비스">
+            <div class="memberService__memberContainer">
+              <span class="arrow">&gt;</span>
+              <span class="memberSubject">회원가입</span>
+            </div>
+            <div class="memberService__findIdPassword">
+              <span class="arrow">&gt;</span>
+              <span class="memberSubject">아이디 비밀번호 찾기</span>
+            </div>
           </div>
-          <button type="submit" class="loginBtn">로그인</button>
-        </div>
-        <div class="memberService" aria-label="회원 서비스">
-          <div>
-            <span class="arrow">&gt;</span>
-            <span>회원가입</span>
-          </div>
-          <div>
-            <span class="arrow">&gt;</span>
-            <span>아이디 비밀번호 찾기</span>
-          </div>
-        </div>
-      </fieldset>
-    </form>
+        </fieldset>
+      </form>
+    </div>
   </div>
 </body>
 
