--- a/mission-01/term.html
+++ b/mission-01/term.html
@@ -15,16 +15,20 @@
     <div class="term-container">
       <h2 class="term-title">웹 관련 용어</h2>
       <dl class="term-list">
-        <dt class="term-list__term">웹 표준 이란?</dt>
-        <dd class="term-list__img">
-          <img src="images/web-standards.png" alt="웹 표준이란?" />
-        </dd>
-        <dd class="term-list__desc">W3C 단체에서 규정한 웹기술 사양에 대한 규칙을 말하며 표준 규격은...</dd>
-        <dt class="term-list__term">웹 표준 이란?</dt>
-        <dd class="term-list__img">
-          <img src="images/web-standards.png" alt="웹 표준이란?" />
-        </dd>
-        <dd class="term-list__desc">W3C 단체에서 규정한 웹기술 사양에 대한 규칙을 말하며 표준 규격은...</dd>
+        <div>
+          <dt class="term-list__term">웹 표준 이란?</dt>
+          <dd class="term-list__img">
+            <img src="images/web-standards.png" alt="웹 표준이란?" />
+          </dd>
+          <dd class="term-list__desc">W3C 단체에서 규정한 웹기술 사양에 대한 규칙을 말하며 표준 규격은...</dd>
+        </div>
+        <div>
+          <dt class="term-list__term">웹 표준 이란?</dt>
+          <dd class="term-list__img">
+            <img src="images/web-standards.png" alt="웹 표준이란?" />
+          </dd>
+          <dd class="term-list__desc">W3C 단체에서 규정한 웹기술 사양에 대한 규칙을 말하며 표준 규격은...</dd>
+        </div>
       </dl>
     </div>
   </div>
